cmake_minimum_required(VERSION 3.9)
project(tinyscheme)

set (PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR})
set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set (TINYSCHEME_SRCS
        ${PROJECT_SOURCE_DIR}/scheme.c
        ${PROJECT_SOURCE_DIR}/scheme.h
        ${PROJECT_SOURCE_DIR}/scheme-private.h)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

set(CMAKE_C_FLAGS "-O3")

# macOS specific features, also used by libsandbox.1.dylib!
set(PLATFORM_FEATURES "-DUSE_STRLWR=0 -DUSE_DL=1 -DOSX=1")
set(FEATURES "${PLATFORM_FEATURES} -DUSE_DL=1 -DUSE_MATH=0 -DUSE_ASCII_NAMES=0 -DUSE_TRACING=1 -DUSE_ERROR_HOOK=1 -DUSE_ASCII_NAMES=0")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FEATURES}")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -DSBPL_DEBUG=1")

add_library(${PROJECT_NAME} STATIC ${TINYSCHEME_SRCS})